--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
